--- a/JotoTools/flask_app/templates/tripBudget/dashboardTripBudget.html
+++ b/JotoTools/flask_app/templates/tripBudget/dashboardTripBudget.html
@@ -3,6 +3,11 @@
 {% block content %}
 <h1>Trip Budget</h1>
 
+
+<div>
+    
+</div>
+
 <div>
     <table>
         <thead>
@@ -17,9 +22,9 @@
         <tbody>
             <tr>
                 <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;">1</td>
-                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;">Luau</td>
-                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;">hawaiiluau.co</td>
-                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;">$500</td>
+                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;"><input type="text" name="event"></td>
+                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;"><input type="text" name="link"></td>
+                <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;"><input  type="number" name="price"</td>
             </tr>
             <tr>
                 <td scope="row" style="font-family: 'Roboto', sans-serif; font-size: 21px;">Total</td>
