--- a/JotoTools/flask_app/templates/tripPlanner/login.html
+++ b/JotoTools/flask_app/templates/tripPlanner/login.html
@@ -9,7 +9,7 @@
 			<a href="/register" class="text-light" style="text-decoration: none; margin-right: 10px;">Register</a>
 		</div>
 		<div>
-			<a href="/" class="text-light" style="text-decoration: none;">Dashboard</a>
+			<a href="/indexTripPlanner" class="text-light" style="text-decoration: none;">Dashboard</a>
 		</div>
 	{% endif %}
 {% endblock header %}
