--- a/JotoTools/flask_app/templates/tripPlanner/layoutTripPlanner.html
+++ b/JotoTools/flask_app/templates/tripPlanner/layoutTripPlanner.html
@@ -63,12 +63,18 @@
         {% block header %}
             {% if 'user_id' in session %}
                 <div>
+                    <a href="/jototools" class="text-light" style="text-decoration: none; margin-right: 10px;">JotoTools</a>
+                </div>
+                <div>
                     <a href="/account/{{user.id}}" class="text-light" style="text-decoration: none; margin-right: 10px;">Account</a>
                 </div>
                 <div>
                     <a href="/logout" class="text-light" style="text-decoration: none; margin-right: 10px;">Logout</a>
                 </div>
             {% else %}
+                <div>
+                    <a href="/jototools" class="text-light" style="text-decoration: none; margin-right: 10px;">JotoTools</a>
+                </div>
                 <div>
                     <a href="/login" class="text-light" style="text-decoration: none; margin-right: 10px;">Login</a>
                 </div>
